# gesture

./: .flake8  .gitignore  Pipfile  README.md  constants.py  environment.yml  input_parser.py  main.py  pyproject.toml  test_vispy.py  utils.py
arduino/: receiver.ino
arduino/accelerometer/: accelerometer.ino
arduino/finder/: finder.ino
arduino/glove/: glove.ino
arduino/receiver/: receiver.ino
export/: session_hd5.py
firmware/: cfg.code-workspace  platformio.ini
firmware/src/: main.cpp
graphics/: data_viewer.py  event_filter.py  int_fourier_display.py  recording_controller.py  signal_canvas.py  simple_canvas.py  status_canvas.py  styles.py
graphics/shaders/: grid_lines.py  simple_point.py
graphics/widgets/: data_viewer.py  main_window.py  recording_controller.py  renamer.py  serial_port_controller.py  serial_port_sim_controller.py  session_controller.py  session_viewer.py  signal_dynamic.py  signal_grid_canvas.py  signal_static.py  visual_console_logger.py
input/: buffered_data_router.py  data_reader.py  data_router.py  input_parser.py  launchpad.py  serial_port_parser.py
interpreters/min_square/: min_square.py  min_square_gesture.py
launchpad-api/: main.js  package-lock.json  package.json
models/: hand_model.blend
processing/: recording_consumer.py  simple_canvas_consumer.py
qt_flavor/: constants.py  input_parser.py  main.py  qlabel_log_handler.py
testing/: simulate_serial.py  test_fourier.py  test_vispy.py  timed_function.py
vispy_flavor/: input_parser.py  int_2d_gesture_display.py  int_fourier.py  int_fourier_display.py  main.py
(+87 files in other folders)
