[tool.poetry]
name = "gesture"
version = "0.1.0"
description = "Multi-accelerometer gesture recognition."
authors = ["zajozor <github@zajo.io>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17.4"
sarge = "^0.1.5"
pyqt5 = "^5.13.2"
vispy = "^0.6.3"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
