[tool.poetry]
name = "gesture"
version = "0.1.0"
description = "Multi-accelerometer gesture recognition."
authors = ["zajozor <github@zajo.io>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17.4"
sarge = "^0.1.5"
pyqt5 = "^5.13.1"
vispy = "^0.6.3"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
PyQt5-stubs = "^5.13.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
